--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
     "knex": "^3.0.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "zod": "^3.23.0"
   }
 }
